# box-algebra

./: Cargo.toml  README.md
src/: add.rs  alt_model.rs  derivative.rs  derivative_alt.rs  display.rs  display_alt.rs  function.rs  lib.rs  lib_alt.rs  list.rs  main.rs  maxel.rs  mul.rs  ord.rs  ordered_set.rs  parser.rs  polynumber.rs  set.rs  store.rs
