[package]
name = "box-algebra"
version = "0.1.0"
edition = "2024"
description = "A crate for Box Algebra. This crate defines the fundamental data structure, a mathematical box, and associated methods for doing basic algebraic operations."
categories = ["mathematics"]
keywords = ["box-algebra", "multisets", "trees"]
repository = "https://github.com/thomfuhrmann/box-algebra.git"
readme = "README.md"
license = "MIT"
exclude = ["src/main.rs"]

[dependencies]
