[package]
name = "box-algebra"
version = "0.1.3"
edition = "2024"
description = "A crate for Box Algebra. This crate defines the fundamental data structure, a mathematical box, and associated methods for doing basic algebraic operations."
categories = ["mathematics"]
keywords = ["box-algebra", "multisets", "trees"]
repository = "https://github.com/thomfuhrmann/box-algebra.git"
readme = "README.md"
license = "MIT"
exclude = ["src/main.rs"]

[dependencies]
chumsky = "0.13.0"
colored = "3.1.1"
crossterm = "0.29.0"
logos = "0.16.1"
malachite = "0.9.1"
rapidhash = "4.4.1"
strum = { version = "0.28.0", features = ["derive"] }
